# declare-telebot

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
specs/001-prompt-collection-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prompt-collection-bot/checklists/: requirements.md
specs/001-prompt-collection-bot/contracts/: http-api.md
src/: config.py
src/api/: app.py  health.py  webhook.py
src/bot/: handlers.py  ports.py  telegram_adapter.py
src/cache/: in_memory_cache.py  ports.py  redis_cache.py
src/db/: session.py
src/jobs/: retention_cleanup.py
src/models/: prompt.py  user.py
src/repositories/: in_memory_repository.py  minio_payload_store.py  ports.py  postgres_repository.py
src/services/: prompt_capture_service.py
telegram_bible_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  fakes.py
tests/contract/: test_health.py  test_webhook_dedup.py  test_webhook_empty.py  test_webhook_nontext.py  test_webhook_text.py
tests/unit/: test_dedup_cache.py  test_handlers_rejection.py  test_prompt_capture_service.py  test_retention_cleanup.py
